--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.7",
   "private": true,
   "scripts": {
-    "dev": "source ENV && next dev",
+    "dev": "source ../owncloud-dashboard/ENV && next dev",
     "build": "next build",
     "start": "node server.js"
   },
