--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,6 @@ steps:
 - name: dryrun
   image: plugins/docker
   settings:
-    build_args:
-    - BUILD_VERSION=${DRONE_TAG%-*}
     dockerfile: Dockerfile
     dry_run: true
     password:
@@ -23,18 +21,10 @@ steps:
     ref:
     - refs/pull/**
 
-- name: tags
-  image: alpine
-  commands:
-  - export BASE=${DRONE_TAG:-latest}
-  - export TAG=$${BASE##v}
-  - if [ "$$TAG" == "latest" ]; then echo -n "latest" > .tags; else echo -n "latest,$${TAG},$${TAG%-*},$${TAG%.*},$${TAG%%.*}" > .tags; fi
-
 - name: publish
   image: plugins/docker
   settings:
-    build_args:
-    - BUILD_VERSION=${DRONE_TAG%-*}
+    auto_tag: true
     dockerfile: Dockerfile
     password:
       from_secret: docker_password
