--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.7",
   "private": true,
   "scripts": {
-    "dev": "source ../owncloud-dashboard/ENV && next dev",
+    "dev": "source ./ENV && next dev",
     "build": "next build",
     "start": "node server.js"
   },
@@ -19,7 +19,7 @@
     "fetch-retry": "^3.1.0",
     "lowdb": "^1.0.0",
     "material-ui-chip-input": "^2.0.0-beta.2",
-    "next": "9.2.2",
+    "next": "^9.4.4",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "query-string": "^6.11.0",
