adding first little ldap auth prototype

--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "cron": "^1.8.2",
     "date-fns": "^2.9.0",
     "fetch-retry": "^3.1.0",
+    "ldapjs": "^2.0.0",
     "lowdb": "^1.0.0",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "next": "^9.4.4",
+    "next-auth": "^2.2.0",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "query-string": "^6.11.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "recharts": "^2.0.0-beta.1",
+    "simple-ldap-client": "^0.6.5",
     "swr": "^0.1.17",
     "unfetch": "^4.1.0",
     "use-location-state": "^2.3.1"
