--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "activedirectory2": "^1.3.0",
     "async-parallel": "^1.2.3",
     "cron": "^1.8.2",
-    "date-fns": "^2.9.0",
+    "date-fns": "^2.15.0",
     "fetch-retry": "^3.2.3",
-    "ldapjs": "^2.0.0",
+    "ldapjs": "^2.1.0",
     "lowdb": "^1.0.0",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "next": "^9.4.4",
