--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.2",
   "private": true,
   "scripts": {
-    "dev": "source ./ENV && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "node server.js"
   },
