--- a/package.json
+++ b/package.json
@@ -13,23 +13,21 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
-    "activedirectory2": "^1.3.0",
+    "@trieb.work/ldap-authentication": "^2.2.3",
     "async-parallel": "^1.2.3",
     "cron": "^1.8.2",
     "date-fns": "^2.16.1",
     "fetch-retry": "^3.2.3",
-    "ldapjs": "^2.1.1",
     "lowdb": "^1.0.0",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "next": "^9.5.3",
-    "next-auth": "^2.2.0",
+    "next-auth": "^3.1.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
     "query-string": "^6.13.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "recharts": "^2.0.0-beta.7",
-    "simple-ldap-client": "^0.6.5",
     "swr": "^0.1.17",
     "unfetch": "^4.1.0",
     "use-location-state": "^2.3.1"
