switching to now released official package

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
-    "@trieb.work/ldap-authentication": "^2.2.5",
     "async-parallel": "^1.2.3",
     "cron": "^1.8.2",
     "date-fns": "^2.16.1",
     "fetch-retry": "^3.2.3",
+    "ldap-authentication": "^2.2.5",
     "lowdb": "^1.0.0",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "next": "^9.5.3",
